--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,7 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% unless enhanced_cart.length == 0 %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +48,9 @@
       <% end %>
     </div>
   </div>
+  <% end %>
 
+  <% if enhanced_cart.length == 0 then %>
+  <div class="alert alert-success" role="alert">Your cart is empty so far, why not get a <a href="/categories/2">shrubbery</a>?</div>
+  <% end %>
 </section>
