Implement basic admin dash

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<header class="page-header">
+    <h1>Admin &raquo; Dashboard</h1>
+</header>
+
+<div class="alert alert-success" role="alert">
+  <h4 class="alert-heading">Site Stats</h4>
+  <p>There is a total of <%= @category_count == 1 ? "1 category " : "#{@category_count} categories " %>of products in the database.</p>
+  <hr>
+  <p class="mb-0">Total number of products: <%=  @product_count %>.</p>
+</div>
