Add category link to dash for admin

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="alert alert-success" role="alert">
   <h4 class="alert-heading">Site Stats</h4>
-  <p>There is a total of <strong><a href="/admin/products"><%= @category_count %></a><%= @category_count == 1 ? " category " : " categories " %></strong>of products in the database.</p>
+  <p>There is a total of <strong><a href="/admin/categories"><%= @category_count %></a><%= @category_count == 1 ? " category " : " categories " %></strong>of products in the database.</p>
   <hr>
   <p class="mb-0">Total number of products: <strong><a href="/admin/products"><%=  @product_count %></a></strong>.</p>
 </div>
