--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,6 +43,14 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
+        <li class="nav-item">
+            <% if current_user %>
+              <li><span class="nav-link">Signed in as <%= current_user.name %></span></li>
+              <li><%= link_to 'Logout', '/logout', :class => 'btn btn-danger' %></li>
+            <% else %>
+              <li><%= link_to 'Login', '/login', :class => 'nav-link' %></li> <li><%= link_to 'Signup', '/users/new', :class => 'nav-link' %></li>
+            <% end %>
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
