--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -40,7 +40,7 @@
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-amount="<%= cart_subtotal_cents %>"
           data-name="Jungle"
-          data-description="<%= current_user ? current_user.name : "Khurram Virani's Jungle Order" %>"
+          data-description="Khurram Virani's Jungle Order"
           data-locale="auto"
           data-email="<%= current_user ? current_user.email : "kvirani@gmail.com" %>"
           data-currency="cad">
