--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -51,6 +51,6 @@
   <% end %>
 
   <% if enhanced_cart.length == 0 then %>
-  <div class="alert alert-danger" role="alert">Your cart is empty so far, why not get a <a href="/categories/2">shrubbery</a>?</div>
+  <div class="alert alert-danger" role="alert">Your cart is empty so far, go add some at<a href="/"> products!</a> (Why not get a <a href="/categories/2">shrubbery</a>?)</div>
   <% end %>
 </section>
