--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,10 +7,10 @@
     </h1>
   <% end%>
   <div>
-    <% if product.quantity == 0 then %>
+    <% if product.sold_out? %>
     <button class='soldout'>Sold Out</button>
     <% end %>
-    <%= button_to add_item_cart_path(product_id: product.id), :disabled => product.quantity == 0 , class: 'btn' ,
+    <%= button_to add_item_cart_path(product_id: product.id), :disabled => product.sold_out? , class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
