--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,10 +13,10 @@
         <span>$<%= @product.price %></span>
       </div>
       <div class="price">
-        <% if @product.quantity == 0 then %>
+        <% if @product.sold_out? %>
           <button class='soldout'>Sold Out</button>
         <% end %>          
-        <%= button_to add_item_cart_path(product_id: @product.id), :disabled => @product.quantity == 0 , class: 'btn' , method: :post do %>
+        <%= button_to add_item_cart_path(product_id: @product.id), :disabled => @product.sold_out? , class: 'btn' , method: :post do %>
           <%= fa_icon "shopping-cart", text: 'Add' %>
         <% end %>          
       </div>
