Fix style error on product page which looked correct but was partitioned incorrectly

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -63,6 +63,14 @@
       text-align: right;
       font-weight: 700;
     }
+    .add-to-cart{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: flex-end;
+        text-align: right;
+        font-weight: 700;
+    }
     button {
       width: 140px;
       font-size: 1em;
